--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1889,6 +1889,9 @@
         </activity>
 
 
+        <activity android:name=".benzo.gestureanywhere.GestureAnywhereBuilderActivity" />
+        <activity android:name=".benzo.gestureanywhere.GestureAnywhereCreateGestureActivity" />   
+
         <!-- Development settings -->
 
         <!-- DeviceInfo adds the user's requested build to stats upload.  -->
