--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2595,5 +2595,17 @@
                      android:resource="@id/owlsnest_settings" />
       	</activity>
 
+        <!-- PA Pie settings activity. -->
+        <activity android:name="Settings$PieControlSettingsActivity"
+                android:label="@string/pa_pie_control_title"
+                android:excludeFromRecents="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.paranoid.PieControl" />
+        </activity>
+
     </application>
 </manifest>
