--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1821,7 +1821,7 @@
                   android:excludeFromRecents="true"
                   android:exported="true"
                   android:permission="android.permission.MANAGE_USB"
-                  android:theme="@style/Theme.Material.Light.Dialog.NoActionBar">
+                  android:theme="@style/Theme.Material.Dialog.Alert">
         </activity>
 
         <activity android:name=".bluetooth.RequestPermissionHelperActivity"
