Add dashboard summary to SuperSU
Change-Id: If8f98eff64b3b8e56246829119814af8ef25d9c1

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -997,6 +997,8 @@
                 android:value="com.android.settings.category.owlsnest" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.SuperSU" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/supersu_dashboard_summary" />
         </activity>
 
         <activity android:name="Settings$DisplaySettingsActivity"
